--- a/Lab6Style.css
+++ b/Lab6Style.css
@@ -6,11 +6,20 @@ body {
     padding: 0;
 }
 
-img {
+.OnePunchCharacter {
     width:100%;
     height:100%;
     position: relative;
     border-radius: 10px;
+    cursor: pointer;
+    transform: scaleX(-1);
+}
+.OnePunchLogo {
+    width:100%;
+    height:100%;
+    position: relative;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 header{
@@ -69,10 +78,32 @@ header{
   opacity: 0.9;
 }
 .Card .CardFront {
-    transform: rotateX(0deg) rotateY(0deg);
+  /*transform: rotateX(0deg) rotateY(0deg);
+  transition: all .4s ease-in-out;
+  backface-visibility: hidden;
+  z-index: 10;*/
+    /*flip*/    
+    transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  transition: all .4s ease-in-out;
+  backface-visibility: visible;
+  z-index: 900;
+  
+}
+.Card .CardBack {    
+    /*transform: rotateX(0deg) rotateY(180deg);
+    transform-style: preserve-3d;
     transition: all .4s ease-in-out;
-    backface-visibility: visible;
-    z-index: 10;
+    backface-visibility: hidden;
+    z-index: 5;*/
+
+    /*flip*/
+    transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  transition: all .4s ease-in-out;
+  backface-visibility: visible;
+  z-index: 1000;
+  
 }
 .Card.flip .CardFront {
     transform: rotateY(180deg);
@@ -80,13 +111,6 @@ header{
     transition: all .4s ease-in-out;
     backface-visibility: hidden;
     z-index: 900;
-}
-.Card .CardBack {    
-    transform: rotateX(0deg) rotateY(180deg);
-    transform-style: preserve-3d;
-    transition: all .4s ease-in-out;
-    backface-visibility: hidden;
-    z-index: 5;
 }
 .Card.flip .CardBack {
     transform: rotateY(0deg);
