--- a/Lab6Style.css
+++ b/Lab6Style.css
@@ -22,6 +22,7 @@ body {
     text-align: center;
     position: absolute;
     display: none;
+    /*display: block;*/
 }
 #box span{
     color: orangered;
